<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_option1"
        android:title="@string/opt1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_option2"
        android:title="@string/opt2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_option3"
        android:title="@string/opt3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_option4"
        android:title="@string/opt4"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_option5"
        android:title="@string/opt5"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_option6"
        android:title="@string/opt6"
        app:showAsAction="never" />

</menu>
